<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 <string name="application">TweetNaCl</string>
 <string name="ok">OK</string>
 <string name="run">Run</string>
 <string name="setup">Setup</string>
 
 <string name="label_unknown"></string>
 <string name="label_crypto_box">crypto_box</string>
 <string name="label_crypto_box_open">crypto_box_open</string>
 <string name="label_crypto_core_hsalsa20">crypto_core_hsalsa20</string>
 <string name="label_crypto_core_salsa20">crypto_core_salsa20</string>
 <string name="label_crypto_hash">crypto_hash</string>
 <string name="label_crypto_hashblocks">crypto_hashblocks</string>
 <string name="label_crypto_onetimeauth">crypto_onetimeauth</string>
 <string name="label_crypto_onetimeauth_verify">crypto_onetimeauth_verify</string>
 <string name="label_crypto_scalarmultbase">crypto_scalarmultbase</string>
 <string name="label_crypto_scalarmult">crypto_scalarmult</string>
 <string name="label_crypto_secretbox">crypto_secretbox</string>
 <string name="label_crypto_secretbox_open">crypto_secretbox_open</string>
 <string name="label_crypto_stream_xor">crypto_stream_xor</string>
 <string name="label_crypto_stream_salsa20_xor">crypto_stream_salsa20_xor</string>
 <string name="label_crypto_sign">crypto_sign</string>
 <string name="label_crypto_sign_open">crypto_sign_open</string>
 <string name="label_crypto_verify16">crypto_verify16</string>
 <string name="label_crypto_verify32">crypto_verify16</string>
 
 <string name="label_size">Message size:</string>
 <string name="label_loops">Loops:</string>
 <string name="label_current">Current:</string>
 <string name="label_average">Average:</string>
 <string name="label_min">Min:</string>
 <string name="label_max">Max:</string>

 <string name="tweetnacl">tweetnacl</string>
 <string name="tweetnaclz">tweetnacl/Z</string>
 <string name="tweetnaclj">tweetnacl/J</string>

 <string name="results_measured">Measured:</string>
 <string name="results_average">Average:</string>
 <string name="results_min">Min:</string>
 <string name="results_max">Max:</string>

 <string name="column_tweetnacl">tweetnacl</string>
 <string name="column_tweetnaclz">tweetnacl/z</string>

 <string name="title_crypto_box">crypto_box</string>
 <string name="title_crypto_box_open">crypto_box_open</string>
 
 <string name="column_box">BOX</string>
 <string name="column_box_open">BOX-OPEN</string>
 <string name="column_hsalsa20">HSALSA20</string>
 <string name="column_salsa20">SALSA20</string>
 <string name="column_hash">HASH</string>
 <string name="column_hashblocks">HASH-BLOCKS</string>
 <string name="column_onetimeauth">AUTH</string>
 <string name="column_onetimeauth_verify">AUTH VERIFY</string>
 <string name="column_scalarmultbase">SCALARMULT BASE</string>
 <string name="column_scalarmult">SCALARMULT</string>
 <string name="column_secretbox">SECRET BOX</string>
 <string name="column_secretbox_open">SECRET BOX OPEN</string>
 <string name="column_stream_xor">XOR</string>
 <string name="column_stream_salsa20_xor">SALSA20-XOR</string>
 <string name="column_sign">SIGN</string>
 <string name="column_sign_open">SIGN-OPEN</string>
 <string name="column_verify16">VERIFY-16</string>
 <string name="column_verify32">VERIFY-32</string>
 
 <string name="navigation_drawer_open">Open navigation drawer</string>
 <string name="navigation_drawer_close">Close navigation drawer</string>
 
 <string name="menuitem_summary">SUMMARY</string>
 <string name="menuitem_crypto_box">CRYPTO BOX</string>
 <string name="menuitem_crypto_core">CRYPTO CORE</string>
 <string name="menuitem_crypto_hash">CRYPTO HASH</string>
 <string name="menuitem_crypto_onetimeauth">CRYPTO ONE TIME AUTH</string>
 <string name="menuitem_crypto_scalarmult">CRYPTO SCALAR MULT</string>
 <string name="menuitem_crypto_secretbox">CRYPTO SECRET BOX</string>
 <string name="menuitem_crypto_stream">CRYPTO STREAM</string>
 <string name="menuitem_crypto_sign">CRYPTO SIGN</string>
 <string name="menuitem_crypto_verify">CRYPTO VERIFY</string>
 
</resources>
