<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="#ffffffff"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
 
 <!-- CONTENT -->
 
 <ScrollView android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_above="@+id/run">
  <RelativeLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">
      
   <!-- MESSAGE SIZE -->
   
   <TextView style="@style/Label"
             android:id="@+id/label_size"
             android:layout_alignBaseline="@+id/size"
             android:layout_alignParentLeft="true"
             android:text="@string/label_size" /> 

   <EditText style="@style/Field"
             android:id="@+id/size"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/label_size"
             android:inputType="number"
             android:digits="0123456789"
             android:text="" /> 
   
   <!-- LOOPS -->
   
   <TextView style="@style/Label"
             android:id="@+id/label_loops"
             android:layout_alignBaseline="@+id/loops"
             android:layout_alignLeft="@+id/label_size"
             android:text="@string/label_loops" /> 
  
   <EditText style="@style/Field"
             android:id="@+id/loops"
             android:layout_alignLeft="@+id/size"
             android:layout_below="@+id/size"
             android:inputType="number"
             android:digits="0123456789"
             android:text="" /> 

   <!-- CURRENT -->
   
   <TextView style="@style/Label"
             android:id="@+id/label_current"
             android:layout_alignBaseline="@+id/current"
             android:layout_alignLeft="@+id/label_size"
             android:text="@string/label_current" /> 
   
   <TextView style="@style/Value"
             android:id="@+id/current"
             android:layout_below="@+id/loops"
             android:layout_alignLeft="@+id/size"
             android:text="" /> 

   <!-- AVERAGE -->
   
   <TextView style="@style/Label"
             android:id="@+id/label_average"
             android:layout_alignBaseline="@+id/average"
             android:layout_alignLeft="@+id/label_size"
             android:text="@string/label_average" /> 
   
   <TextView style="@style/Value"
             android:id="@+id/average"
             android:layout_below="@+id/current"
             android:layout_alignLeft="@+id/size"
             android:text="" /> 

   <!-- MIN -->
   
   <TextView style="@style/Label"
             android:id="@+id/label_min"
             android:layout_alignBaseline="@+id/min"
             android:layout_alignLeft="@+id/label_size"
             android:text="@string/label_min" /> 
   
   <TextView style="@style/Value"
             android:id="@+id/min"
             android:layout_below="@+id/average"
             android:layout_alignLeft="@+id/size"
             android:text="" /> 

   <!-- MAX -->
   
   <TextView style="@style/Label"
             android:id="@+id/label_max"
             android:layout_alignBaseline="@+id/max"
             android:layout_alignLeft="@+id/label_size"
             android:text="@string/label_max" /> 
   
   <TextView style="@style/Value"
             android:id="@+id/max"
             android:layout_below="@+id/min"
             android:layout_alignLeft="@+id/size"
             android:text="" /> 
   
   </RelativeLayout>             
 </ScrollView>

 <Button style="@style/RunButton"
         android:id="@+id/run"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" 
         android:text="@string/run" />
 
 <!--  WINDMILL -->
 
 <RelativeLayout android:id="@+id/windmill"
                 android:background="#40808080"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:visibility="gone">
  <ProgressBar android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true" 
               android:indeterminateOnly="true" />
 </RelativeLayout>
 
</RelativeLayout>